--- a/ex015.html
+++ b/ex015.html
@@ -6,7 +6,7 @@
     <title>Hora do Dia</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body id="corpo" onload="carregar()">
+  <body id="corpo" onload="load()">
     <header>
       <h1>Hora do Dia</h1>
     </header>
