Translated the content from Portuguese to English.

--- a/ex015.html
+++ b/ex015.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hora do Dia</title>
+    <title>Time of Day</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body id="corpo" onload="load()">
     <header>
-      <h1>Hora do Dia</h1>
+      <h1>Time of Day</h1>
     </header>
     <section>
       <div id="msg"></div>
       <div id="foto">
-        <img id="imagem" src="manha.png" alt="Foto do dia" />
+        <img id="imagem" src="morning.png" alt="Photo of the day" />
       </div>
     </section>
     <footer>
